--- a/paginas/style.css
+++ b/paginas/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 2.0pt;
     margin-left: 30px;
+    user-select: none
 }
 
 .pagina, .hidden, #opcoes {
@@ -17,6 +18,7 @@ form {
 
 input {
     margin: 15px;
+    text-align: center;
 }
 
 select {
@@ -49,4 +51,27 @@ button {
     width: fit-content;
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+#inputTagTP {
+    pointer-events: none;
+    user-select: none;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    align-items: center;
+}
+
+#alert {
+    display: none;
+    background-color: rgb(66, 168, 66);
+    padding: 10px;
+    margin: 3px;
+    border: 2px solid black;
+    color: white;
+    font-size: 20pt;
+    width: 60%;
+    box-shadow: gray 5px 5px;
 }
