--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 2.0pt;
     margin-left: 30px;
-    user-select: none
+    user-select: none;
+    background-color: darkorchid;
 }
 
 .pagina, .hidden, #opcoes {
