--- a/style.css
+++ b/style.css
@@ -91,7 +91,17 @@ body {
     padding: 8px;
 }
 
-button {
+.botao-secundario {
+    background-color: #173d72;
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    border: #173d72 solid 2px;
+    font-size: 12pt;
+    margin: 0.1em;
+}
+
+.botao-principal {
     background-color: #173d72;
     color: white;
     padding: 8px;
@@ -109,21 +119,59 @@ button:active, button:focus {
     border: solid 2px #f29206;
 }
 
-#inicio {
-    display: none;
-    padding: 1em;
+.botaoAtivo {
+    border: solid 2px #f29206;
+}
+
+#inputTagTP{
+    margin:3px;
+}
+
+#formRFIDTP {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#divBtnMaisOpc{
+    background-color:white;
+    padding-top: 15px;
     width: 100%;
-    height: 100%;
 }
 
-#leitor {
-    margin-left: 5vw;
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
-
-#grid-inicio {
-    margin-left: 2vw;
-    border: solid black 1px;
-   
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
 }
 
 #principal {
@@ -135,6 +183,7 @@ button:active, button:focus {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 90%;
     width: 100%;
 }
 
@@ -168,10 +217,7 @@ input {
     font-size: 14pt;
 }
 
-fieldset {
-    border-radius: 5px;
-    border: lightgray solid 1px;
-}
+
 
 .menu {
     width: 100%;
@@ -208,7 +254,7 @@ fieldset {
 }
 
 #falhaLeitor {
-    color: red
+    color: darkorange
 }
 
 .grid-transporte{
@@ -225,16 +271,51 @@ fieldset {
     margin: 1px;
 }
 
+#inicio {
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#leitor {
+    width:15%;
+    height:65vh;
+    background-color: darkorange;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+#grid-inicio {
+    border: solid rgb(228, 228, 228) 1px;
+    background-color: whitesmoke;
+    width: 80%;
+    height: 80%;
+    text-align: center;
+    min-height: 65vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .grid-container-inicio {
     display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
+    justify-content: space-evenly;
+    grid-template-columns: 20%  20%  20%  20%  20% ;
+    font-size: 14pt;
 }
 
 [class*='item-inicio'] {
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    font-size: 2vw;
+    border: 1px solid rgba(0, 0, 0, 0.8);   
     text-align: center;
+    overflow-wrap: break-word;
+    margin: 5px;
 }
 
 [class*='item-inicio']:hover {
