--- a/style.css
+++ b/style.css
@@ -351,7 +351,9 @@ input {
 .item-inicio-red{
     background-color: red;
 }
-
+.item-inicio-yellow{
+    background-color: yellow;
+}
 .item-inicio-green{
     background-color: rgb(0,128,0);
 }
