--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ body {
     top: 30vh;
 }
 
+#checarGerente {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /* https://loading.io/css */
 
 .lds-dual-ring {
@@ -111,6 +118,16 @@ body {
     margin: 0.1em;
 }
 
+button {
+    background-color: #173d72;
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    border: #173d72 solid 2px;
+    font-size: 12pt;
+    margin: 0.1em;
+}
+
 button:hover {
     background-color: #173d72c0
 }
@@ -119,12 +136,18 @@ button:active, button:focus {
     border: solid 2px #f29206;
 }
 
-.botaoAtivo {
-    border: solid 2px #f29206;
+.botao-terciario{
+    background-color: #173d72;
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    border: #173d72 solid 2px;
+    font-size: 12pt;
+    margin: 0.1em;
 }
 
-#inputTagTP{
-    margin:3px;
+.botaoAtivo {
+    border: solid 2px #f29206;
 }
 
 #formRFIDTP {
@@ -133,6 +156,7 @@ button:active, button:focus {
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 80%;
 }
 
 #divBtnMaisOpc{
@@ -149,7 +173,7 @@ button:active, button:focus {
 }
 .lds-ripple div {
   position: absolute;
-  border: 4px solid #fff;
+  border: 4px solid #173d72;
   opacity: 1;
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
@@ -180,11 +204,11 @@ button:active, button:focus {
     margin-top: 1em;
     padding-bottom: 75px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
-    height: 90%;
-    width: 100%;
+    min-height: 90%;
+    width: 100vw;
 }
 
 input {
@@ -217,15 +241,33 @@ input {
     font-size: 14pt;
 }
 
-
+.paginas {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 
 .menu {
-    width: 100%;
+    position: fixed;
+    left: 20px;
+    z-index: 10;
     display: none;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    margin-bottom: 2em;
+    align-self: flex-start;
 }
+/* 
+.menu:hover{
+    animation: show-menu .5s;
+    left: 20px;
+
+} */
+
+@keyframes show-menu {
+    0% {left: -80px}
+    100% {left: 20px}
+}
+
 .menu1 {
     width: 100%;
     display: flex;
@@ -261,7 +303,26 @@ input {
 }
 
 #falhaLeitor {
-    color: darkorange
+    color: white;
+    background-color: white;
+    border: white;
+}
+
+#falhaLeitor:hover {
+    animation: showFalhaLeitor 3s ease-out;
+    animation-delay: 1s;
+}
+
+@keyframes showFalhaLeitor {
+    0% {background-color: white}
+    50% {
+        background-color: #173d72c0;
+        visibility: visible;
+    }
+    100% {
+        background-color: #173d72c0;
+        visibility: visible;
+    }
 }
 
 .grid-transporte{
@@ -289,7 +350,7 @@ input {
 #leitor {
     width:15%;
     height:65vh;
-    background-color: darkorange;
+    background-color: #f29206;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -301,7 +362,7 @@ input {
     display:none;
     width:60%;
     height:65vh;
-    background-color: darkorange;
+    background-color: #f29206;
     padding: 5px;
     flex-direction: column;
     justify-content: space-evenly;
@@ -391,12 +452,6 @@ input {
     color: lightgray
 }
 
-.hidden, .pagina {
-    display: none;
-}
-
-
-
 .secundario{
     display: none;
     flex-direction: column;
@@ -406,8 +461,20 @@ input {
     border:1px solid LightGray;
     background-color: ghostwhite;
     width: 90%;
-    height: 70vh;
+    min-height: 70vh;
 }
+
+.terciario {
+    display: none;
+    flex-direction: column;
+    justify-content: initial;
+    align-items: center;
+    text-align: center;
+    background-color: grey;
+    margin-top: 2vh;
+}
+
+
 #h1Busca{
     margin:4px;
 }
@@ -434,12 +501,11 @@ input {
 .btnBuscar:hover{
     background-color: #173d72c0
 }
-.botao-terciario{
-    background-color: #173d72;
-    color: white;
-    padding: 8px;
-    border-radius: 5px;
-    border: #173d72 solid 2px;
-    font-size: 12pt;
-    margin: 0.1em;
+
+.hidden, .pagina {
+    display: none;
+}
+
+.input-hidden {
+    opacity: 0;
 }
