--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
+    overflow-y: scroll;
 }
   
 
@@ -201,14 +203,14 @@ button:active, button:focus {
 #principal {
     position: relative;
     z-index: 1;
-    margin-top: 1em;
     padding-bottom: 75px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
     min-height: 90%;
     width: 100vw;
+    margin-top: 1em;
 }
 
 input {
@@ -238,23 +240,23 @@ input {
     border: 1px solid rgb(226, 226, 226);
     text-align: center;
     padding: 0.4em;
-    font-size: 14pt;
+    font-size: 13pt;
 }
 
 .paginas {
-    width: 100vw;
     display: flex;
     justify-content: center;
+    width: 80%;
 }
 
 .menu {
-    position: fixed;
-    left: 20px;
-    z-index: 10;
+    position: sticky;
+    top: 70px;
     display: none;
     flex-direction: column;
-    justify-content: center;
-    align-self: flex-start;
+    justify-content: flex-start;
+    height: 100%;
+    width: 10%;
 }
 /* 
 .menu:hover{
