--- a/style.css
+++ b/style.css
@@ -52,6 +52,21 @@ body {
     align-items: center;
 }
 
+#contador {
+    display: none;
+    flex-direction: row;
+    position: fixed;
+    z-index: 11;
+    top: 10px;
+    right: 50px;
+    background-color: red;
+    color: white;
+}
+
+#contador div {
+    margin: 3px;
+}
+
 /* https://loading.io/css */
 
 .lds-dual-ring {
@@ -108,6 +123,7 @@ body {
     border: #173d72 solid 2px;
     font-size: 12pt;
     margin: 0.1em;
+    min-width: 80px;
 }
 
 .botao-principal {
@@ -146,6 +162,7 @@ button:active, button:focus {
     border: #173d72 solid 2px;
     font-size: 12pt;
     margin: 0.1em;
+    min-width: 60px;
 }
 
 .botaoAtivo {
@@ -511,4 +528,100 @@ input {
 
 .input-hidden {
     opacity: 0;
+}
+
+#cadastro h1 {
+    margin: 4px;
+}
+#cadastro h3 {
+    margin: 4px;
+}
+
+#divAtualizarUsuario {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 200px;
+    background-color: white;
+    border: 1px black solid;
+    padding-top: 10px;
+}
+
+#formAtualizarUsuario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#divTagAtualiza {
+    flex-direction: column;
+    align-items: center;
+    padding: 8px;
+}
+
+#senhas h1 {
+    margin: 4px;
+    margin-bottom: 25px;
+}
+
+#esqueciSenha {
+    background-color: white;
+    border: 1px solid black;
+    flex-direction: column;
+    margin-top: 40px;
+    padding: 50px;
+}
+
+#esqueciSenha input, #formAtualizarUsuario input {
+    height: 50px;
+    font-size: 20pt;
+}
+
+#esqueciSenha button {
+    margin-top: 20px;
+}
+
+#atualizarSenha {
+    background-color: white;
+    border: 1px solid black;
+    flex-direction: column;
+    padding: 30px;
+    margin-top: 40px;
+    width: 50%;
+}
+
+#login input {
+    font-size: 20pt;
+    padding: 5px;
+    margin: 5px;
+}
+
+#login form {
+    display: flex;
+    flex-direction: column;
+}
+
+#divNovaSenha {
+    flex-direction: column;
+    width: 100%;  
+}
+
+#divNovaSenha form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#divNovaSenha input[type='password'], #divNovaSenha input[type='text'] {
+    margin: 5px;
+    width: 150px;
+}
+
+
+
+#divNovaSenha label {
+    font-size: 8pt;
+    margin-top: 10px;
 }
